// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubmissionViewer renders a discussion_topic submission 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "flex": 1,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 16,
    }
  }
>
  <AuthenticatedWebView
    contentInset={
      Object {
        "bottom": 0,
      }
    }
    navigator={undefined}
    source={
      Object {
        "uri": "https://google.com",
      }
    }
    style={
      Object {
        "flex": 1,
      }
    }
  />
</View>
`;

exports[`SubmissionViewer renders a file (stub) 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "flex": 1,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 16,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 0,
        "height": 200,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": ".SFUIDisplay",
          },
          Object {
            "color": "#2D3B45",
            "fontSize": 16,
          },
          Object {
            "fontFamily": ".SFUIDisplay-medium",
            "textAlign": "center",
          },
          Object {
            "fontFamily": ".SFUIDisplay",
          },
        ]
      }
    >
      This student does not have a submission for this assignment.
    </Text>
  </View>
</View>
`;

exports[`SubmissionViewer renders a media submission 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "flex": 1,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 16,
    }
  }
>
  <VideoContainer
    source={
      Object {
        "uri": "https://instructuremedia.com/charlie_the_unicorn",
      }
    }
    style={
      Object {
        "height": 193,
      }
    }
    testID="submission-viewer.video"
  />
</View>
`;

exports[`SubmissionViewer renders a moderated graded assignment submission 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "flex": 1,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 16,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
    testID="web-container.view"
  >
    <CanvasWebView
      bounces={true}
      contentInset={
        Object {
          "bottom": 0,
        }
      }
      html="This is my submission!"
      navigator={undefined}
      onError={[Function]}
      onFinishedLoading={[Function]}
      onHeightChange={[Function]}
      onMessage={[Function]}
      onNavigation={[Function]}
      scrollEnabled={true}
      source={
        Object {
          "baseURL": "http://mobiledev.instructure.com/",
          "html": "This is my submission!",
        }
      }
      style={
        Object {
          "flex": 1,
        }
      }
    />
  </View>
</View>
`;

exports[`SubmissionViewer renders an online_quiz submission 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "flex": 1,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 16,
    }
  }
>
  <AuthenticatedWebView
    contentInset={
      Object {
        "bottom": 0,
      }
    }
    navigator={undefined}
    source={
      Object {
        "uri": "https://google.com",
      }
    }
    style={
      Object {
        "flex": 1,
      }
    }
  />
</View>
`;

exports[`SubmissionViewer renders an online_text_entry submission 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "flex": 1,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 16,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
    testID="web-container.view"
  >
    <CanvasWebView
      bounces={true}
      contentInset={
        Object {
          "bottom": 0,
        }
      }
      html="<p>Form Voltron</p>"
      navigator={undefined}
      onError={[Function]}
      onFinishedLoading={[Function]}
      onHeightChange={[Function]}
      onMessage={[Function]}
      onNavigation={[Function]}
      scrollEnabled={true}
      source={
        Object {
          "baseURL": "http://mobiledev.instructure.com/",
          "html": "<p>Form Voltron</p>",
        }
      }
      style={
        Object {
          "flex": 1,
        }
      }
    />
  </View>
</View>
`;

exports[`SubmissionViewer renders external tool submission 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "flex": 1,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 16,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 0,
        "height": 200,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": ".SFUIDisplay",
          },
          Object {
            "color": "#2D3B45",
            "fontSize": 16,
          },
          Object {
            "fontFamily": ".SFUIDisplay-medium",
            "textAlign": "center",
          },
          Object {
            "fontFamily": ".SFUIDisplay",
          },
        ]
      }
    >
      This student does not have a submission for this assignment.
    </Text>
  </View>
</View>
`;

exports[`SubmissionViewer renders external tool submission with a submission 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "flex": 1,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 16,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 0,
        "height": 200,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": ".SFUIDisplay",
          },
          Object {
            "color": "#2D3B45",
            "fontSize": 16,
          },
          Object {
            "fontFamily": ".SFUIDisplay-medium",
            "textAlign": "center",
          },
          Object {
            "fontFamily": ".SFUIDisplay",
          },
        ]
      }
    >
      This student does not have a submission for this assignment.
    </Text>
  </View>
</View>
`;

exports[`SubmissionViewer renders grade-only submission 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "flex": 1,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 16,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 0,
        "height": 200,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": ".SFUIDisplay",
          },
          Object {
            "color": "#2D3B45",
            "fontSize": 16,
          },
          Object {
            "fontFamily": ".SFUIDisplay-medium",
            "textAlign": "center",
          },
          Object {
            "fontFamily": ".SFUIDisplay",
          },
        ]
      }
    >
      This student does not have a submission for this assignment.
    </Text>
  </View>
</View>
`;

exports[`SubmissionViewer renders no group submission 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "flex": 1,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 16,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 0,
        "height": 200,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": ".SFUIDisplay",
          },
          Object {
            "color": "#2D3B45",
            "fontSize": 16,
          },
          Object {
            "fontFamily": ".SFUIDisplay-medium",
            "textAlign": "center",
          },
          Object {
            "fontFamily": ".SFUIDisplay",
          },
        ]
      }
    >
      This group does not have a submission for this assignment.
    </Text>
  </View>
</View>
`;

exports[`SubmissionViewer renders no submission 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "flex": 1,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 16,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 0,
        "height": 200,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": ".SFUIDisplay",
          },
          Object {
            "color": "#2D3B45",
            "fontSize": 16,
          },
          Object {
            "fontFamily": ".SFUIDisplay-medium",
            "textAlign": "center",
          },
          Object {
            "fontFamily": ".SFUIDisplay",
          },
        ]
      }
    >
      This student does not have a submission for this assignment.
    </Text>
  </View>
</View>
`;

exports[`SubmissionViewer renders on-paper submission 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "flex": 1,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 16,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 0,
        "height": 200,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": ".SFUIDisplay",
          },
          Object {
            "color": "#2D3B45",
            "fontSize": 16,
          },
          Object {
            "fontFamily": ".SFUIDisplay-medium",
            "textAlign": "center",
          },
          Object {
            "fontFamily": ".SFUIDisplay",
          },
        ]
      }
    >
      This assignment only allows on-paper submissions.
    </Text>
  </View>
</View>
`;

exports[`SubmissionViewer renders submission type of none 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "flex": 1,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 16,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 0,
        "height": 200,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": ".SFUIDisplay",
          },
          Object {
            "color": "#2D3B45",
            "fontSize": 16,
          },
          Object {
            "fontFamily": ".SFUIDisplay-medium",
            "textAlign": "center",
          },
          Object {
            "fontFamily": ".SFUIDisplay",
          },
        ]
      }
    >
      This assignment does not allow submissions.
    </Text>
  </View>
</View>
`;
